Fix WC pagination spacing

--- a/woocommerce.css
+++ b/woocommerce.css
@@ -131,7 +131,7 @@ input.button.added:after,
       .woocommerce .woocommerce-pagination ul li .next,
       .woocommerce .woocommerce-pagination ul li .prev {
         font-size: 14px;
-        padding: 12px 14.3px 12px; }
+        padding: 12px 14.3px 11px; }
         .woocommerce .woocommerce-pagination ul li .next span:before,
         .woocommerce .woocommerce-pagination ul li .prev span:before {
           position: relative;
